--- a/src/assets/stylesheets/App.scss
+++ b/src/assets/stylesheets/App.scss
@@ -1,38 +1,97 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app {
+  display: flex;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.logo-div {
+  width: 5%;
+  background-color: grey;
+}
+
+.channels {
+  width: 25%;
+  background-color: lightgrey;
+  padding-left: 30px;
+
+  .channel-list {
+    list-style: none;
+    padding-left: 0;
+
+    li {
+      margin: 10px 0;
+      cursor: pointer;
+    }
+    .active {
+      font-weight: bolder;
+    }
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.message-list-container {
+  width: 70%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  justify-content: space-between;
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .message-list-channel {
+    padding: 10px 30px;
+    height: 5%;
+    font-weight: bolder;
   }
-  to {
-    transform: rotate(360deg);
+
+  .messages-container {
+    padding: 20px 30px;
+    border-top: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
+    height: 85%;
+    overflow-y: scroll;
+
+    .author {
+      font-weight: 800;
+      color: green;
+      margin-bottom: 12px;
+    }
+
+    .created_at {
+      font-size: 0.8rem;
+      color: gray;
+      font-style: italic;
+    }
+
+    .content {
+      margin-top: 12px;
+    }
+  }
+
+  .message-form {
+    width: 100%;
+    height: 10%;
+    padding: 20px 30px;
+
+    input[type="text"] {
+      width: 95%;
+      padding: 6px 10px;
+      border: 1px solid lightgray;
+      border-right: none;
+
+      &:focus {
+        box-shadow: none;
+        border: 1px solid lightgray;
+        border-right: none;
+      }
+    }
+
+    button {
+      width: 5%;
+      padding: 7px 10px;
+      border: none;
+      background-color: rgb(209, 51, 53);
+      color: white;
+      font-weight: 800;
+    }
   }
 }
